fix(globals.css): adjust color values for block styles to improve contrast

--- a/client/src/app/styles/globals.css
+++ b/client/src/app/styles/globals.css
@@ -5,9 +5,9 @@
   --foreground: hsl(0 0 94);
   --text-muted: hsl(218 11 65);
 
-  --block: hsl(222, 36%, 11%);
-  --block-light: hsl(222, 46%, 11%);
-  --block-muted: hsl(222, 44%, 9%);
+  --block: hsl(222, 36%, 21%);
+  --block-light: hsl(222, 46%, 21%);
+  --block-muted: hsl(222, 44%, 19%);
   --border-color: hsl(227, 18%, 20%);
 
   --gradient-base: hsl(0, 65%, 45%);
